added validation for command objects and ability to display them in thymeleaf