@@ -2,46 +2,45 @@ package com.project.recipe.converters;
 
 import com.project.recipe.commands.CategoryCommand;
 import com.project.recipe.domain.Category;
-import org.junit.jupiter.api.BeforeEach;
-import org.junit.jupiter.api.Test;
+import org.junit.Before;
+import org.junit.Test;
 
-import static org.junit.jupiter.api.Assertions.*;
+import static org.junit.Assert.*;
 
-class CategoryCommandToCategoryTest {
-    public static final Long ID_VALUE = Long.valueOf(1l);
+public class CategoryCommandToCategoryTest {
+
+    public static final Long ID_VALUE = new Long(1L);
     public static final String DESCRIPTION = "description";
+    CategoryCommandToCategory conveter;
 
-    CategoryCommandToCategory converter;
-
-    @BeforeEach
-    void setUp()  throws  Exception{
-        converter = new CategoryCommandToCategory();
+    @Before
+    public void setUp() throws Exception {
+        conveter = new CategoryCommandToCategory();
     }
 
     @Test
-    public void testNullObject() throws Exception{
-        assertNull(converter.convert(null));
+    public void testNullObject() throws Exception {
+        assertNull(conveter.convert(null));
     }
 
     @Test
-    public void testEmptyObject() throws Exception{
-        assertNotNull(converter.convert(new CategoryCommand()));
-
+    public void testEmptyObject() throws Exception {
+        assertNotNull(conveter.convert(new CategoryCommand()));
     }
 
     @Test
-    public void convert() throws Exception{
+    public void convert() throws Exception {
         //given
         CategoryCommand categoryCommand = new CategoryCommand();
         categoryCommand.setId(ID_VALUE);
         categoryCommand.setDescription(DESCRIPTION);
 
         //when
-        Category category = converter.convert(categoryCommand);
+        Category category = conveter.convert(categoryCommand);
 
         //then
         assertEquals(ID_VALUE, category.getId());
         assertEquals(DESCRIPTION, category.getDescription());
-
     }
+
 }
