@@ -1,56 +1,83 @@
 package com.project.recipe.converters;
 
 import com.project.recipe.commands.IngredientCommand;
+import com.project.recipe.commands.UnitOfMeasureCommand;
+import com.project.recipe.domain.Ingredient;
 import com.project.recipe.domain.Recipe;
-import org.junit.jupiter.api.BeforeEach;
-import org.junit.jupiter.api.Test;
+import org.junit.Before;
+import org.junit.Test;
 
 import java.math.BigDecimal;
 
-import static org.junit.jupiter.api.Assertions.*;
+import static org.junit.Assert.*;
 
-class IngredientCommandToIngredientTest {
+public class IngredientCommandToIngredientTest {
+
     public static final Recipe RECIPE = new Recipe();
     public static final BigDecimal AMOUNT = new BigDecimal("1");
     public static final String DESCRIPTION = "Cheeseburger";
-    public static final Long ID_VALUE = Long.valueOf(1l);
-    public static final Long UOM_ID = Long.valueOf(2l);
+    public static final Long ID_VALUE = new Long(1L);
+    public static final Long UOM_ID = new Long(2L);
 
     IngredientCommandToIngredient converter;
 
-
-    @BeforeEach
-    void setUp() {
+    @Before
+    public void setUp() throws Exception {
         converter = new IngredientCommandToIngredient(new UnitOfMeasureCommandToUnitOfMeasure());
     }
 
     @Test
-    public void testNullObject() {
+    public void testNullObject() throws Exception {
         assertNull(converter.convert(null));
     }
 
     @Test
-    void testEmptyObject() {
+    public void testEmptyObject() throws Exception {
         assertNotNull(converter.convert(new IngredientCommand()));
     }
 
     @Test
-    void convert() {
+    public void convert() throws Exception {
         //given
+        IngredientCommand command = new IngredientCommand();
+        command.setId(ID_VALUE);
+        command.setAmount(AMOUNT);
+        command.setDescription(DESCRIPTION);
+        UnitOfMeasureCommand unitOfMeasureCommand = new UnitOfMeasureCommand();
+        unitOfMeasureCommand.setId(UOM_ID);
+        command.setUom(unitOfMeasureCommand);
 
         //when
+        Ingredient ingredient = converter.convert(command);
 
         //then
-
+        assertNotNull(ingredient);
+        assertNotNull(ingredient.getUom());
+        assertEquals(ID_VALUE, ingredient.getId());
+        assertEquals(AMOUNT, ingredient.getAmount());
+        assertEquals(DESCRIPTION, ingredient.getDescription());
+        assertEquals(UOM_ID, ingredient.getUom().getId());
     }
 
     @Test
-    public void convertWithNullUOM(){
+    public void convertWithNullUOM() throws Exception {
         //given
+        IngredientCommand command = new IngredientCommand();
+        command.setId(ID_VALUE);
+        command.setAmount(AMOUNT);
+        command.setDescription(DESCRIPTION);
+        UnitOfMeasureCommand unitOfMeasureCommand = new UnitOfMeasureCommand();
+
 
         //when
+        Ingredient ingredient = converter.convert(command);
 
         //then
-
+        assertNotNull(ingredient);
+        assertNull(ingredient.getUom());
+        assertEquals(ID_VALUE, ingredient.getId());
+        assertEquals(AMOUNT, ingredient.getAmount());
+        assertEquals(DESCRIPTION, ingredient.getDescription());
     }
+
 }
