@@ -2,43 +2,49 @@ package com.project.recipe.converters;
 
 import com.project.recipe.commands.UnitOfMeasureCommand;
 import com.project.recipe.domain.UnitOfMeasure;
-import org.junit.jupiter.api.BeforeEach;
-import org.junit.jupiter.api.Test;
+import org.junit.Before;
+import org.junit.Test;
 
-import static org.junit.jupiter.api.Assertions.*;
+import static org.junit.Assert.*;
 
-class UnitOfMeasureCommandToUnitOfMeasureTest {
+public class UnitOfMeasureCommandToUnitOfMeasureTest {
+
     public static final String DESCRIPTION = "description";
-    public static final Long LONG_VALUE = Long.valueOf(1l);
+    public static final Long LONG_VALUE = new Long(1L);
 
     UnitOfMeasureCommandToUnitOfMeasure converter;
 
-    @BeforeEach
-    void setUp() {
+    @Before
+    public void setUp() throws Exception {
         converter = new UnitOfMeasureCommandToUnitOfMeasure();
+
     }
 
     @Test
-    public void testNullParameter() throws Exception{
+    public void testNullParamter() throws Exception {
         assertNull(converter.convert(null));
     }
 
     @Test
-    public void testEmptyObject() throws Exception{
+    public void testEmptyObject() throws Exception {
         assertNotNull(converter.convert(new UnitOfMeasureCommand()));
     }
 
-
     @Test
-    void convert() throws Exception {
+    public void convert() throws Exception {
+        //given
         UnitOfMeasureCommand command = new UnitOfMeasureCommand();
         command.setId(LONG_VALUE);
         command.setDescription(DESCRIPTION);
 
+        //when
         UnitOfMeasure uom = converter.convert(command);
 
+        //then
         assertNotNull(uom);
         assertEquals(LONG_VALUE, uom.getId());
         assertEquals(DESCRIPTION, uom.getDescription());
+
     }
+
 }
